Fix blog -content hiding behind header

--- a/blog/static/blog/blog.css
+++ b/blog/static/blog/blog.css
@@ -1,3 +1,7 @@
-h4 {
+h2 {
     scroll-margin-top: 5rem;
+}
+
+.container-blog {
+    margin-top: 200px;
 }
